# decentralized-freelance-marketplace

./: .env.example  .gitignore  Anchor.toml  FEATURES.md  PLAN.md  README.md  TASKS.md  biome.json  compose.yaml  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: app.ts  env.ts  server.ts
apps/api/test/: auth.test.ts  disputes.test.ts  foundation.test.ts  jobs.test.ts  proposals.test.ts  reputation.test.ts
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx  providers.tsx  styles.css  wallet-access.tsx
docs/: architecture.md  demo.md  deployment.md  disputes.md  escrow-program.md  event-indexer.md  jobs.md  milestone-lifecycle.md  proposals-and-negotiation.md  security-review.md  trust-and-economics.md  wallet-authentication.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20260715221440_foundation/: migration.sql
prisma/migrations/20260715221942_saved_searches/: migration.sql
prisma/migrations/20260717230025_proposals_contracts_messages/: migration.sql
prisma/migrations/20260717231055_chain_events/: migration.sql
prisma/migrations/20260717235830_disputes/: migration.sql
prisma/migrations/20260718000156_reputation/: migration.sql
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
scripts/: live-smoke.ts
services/indexer/: package.json
services/indexer/src/: cli.ts  index.ts  prisma-repository.ts  rpc-source.ts  service.ts  types.ts
services/indexer/test/: rpc-source.test.ts  service.test.ts
(+26 files in other folders)
