[package]
name = "proofwork-escrow"
version = "0.1.0"
description = "Native SOL milestone escrow for Proofwork"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proofwork_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "=1.0.2"
